--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.AZURE_USER }}@${{ secrets.AZURE_HOST }} << 'EOF'
             cd ${{ secrets.DEPLOY_PATH }}
-            sudo git pull origin main
+            sudo git pull
             sudo npm install && sudo npm run build
             sudo COMPOSER_ALLOW_SUPERUSER=1 composer install --no-dev --optimize-autoloader --ignore-platform-reqs
             php artisan migrate --force
@@ -34,6 +34,6 @@ jobs:
             php artisan route:clear
             php artisan queue:restart
             php artisan clear-compiled
-            php artisan optimize
+            sudo php artisan optimize
             sudo systemctl restart apache2
           EOF
