--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-sweetalert2": "^5.0.11",
         "vued3tree": "^4.1.1",
         "ziggy-js": "^2.4.2"
     },
