--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
+    "jsxImportSource": "vue",
     "sourceMap": true,
+    "noEmit": true,
+    "isolatedModules": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom",  "DOM.Iterable"],
+    "allowJs": true,
+    "maxNodeModuleJsDepth": 0,
     "skipLibCheck": true,
     "types": [
       "vite/client"
