--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "vue": "^3.5.13",
         "vue-sweetalert2": "^5.0.11",
         "vued3tree": "^4.1.1",
+        "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
